tests/integration/snapshots/integration__common__long_fraction.snap
---
source: tests/integration/common.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
439043098908430980982412345678009987.6654433231123413847890813843897873986381727319297072310970972784365768257862
stdout --- 
439043098908430980982412345678009987.6654433231123413847890813843897873986381727319297072310970972784365768257862
stderr --- 
<empty>
