tests/integration/snapshots/integration__common__long_integer.snap
---
source: tests/integration/common.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
4390430989084309809824123456780099876654433231123413847890813843897873986381727319297072310970972784365768257862
stdout --- 
4390430989084309809824123456780099876654433231123413847890813843897873986381727319297072310970972784365768257862
stderr --- 
<empty>
